// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get category transformer Возвращает трансформированную категорию 1`] = `
Object {
  "blocks": Array [],
  "createdAt": 2021-06-03T16:25:54.000Z,
  "isArchived": false,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "Новости (мета дескрипшен)",
  "metaTitle": "Новости (мета тайтл)",
  "posts": null,
  "postsCount": 10,
  "shortTitle": "Ньюс",
  "tags": undefined,
  "title": "Новости",
  "urlPart": "news",
}
`;

exports[`Get category transformer Возвращает трансформированную категорию с тегами 1`] = `
Object {
  "blocks": Array [],
  "createdAt": 2021-06-03T16:25:54.000Z,
  "isArchived": false,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "Новости (мета дескрипшен)",
  "metaTitle": "Новости (мета тайтл)",
  "posts": null,
  "postsCount": 10,
  "shortTitle": "Ньюс",
  "tags": Array [
    Object {
      "blocks": null,
      "category_tag": Object {
        "category_key": "news",
        "createdAt": 2021-09-08T12:30:35.000Z,
        "id": 1,
        "tag_key": "conceptcar",
      },
      "createdAt": 2021-06-03T16:26:11.000Z,
      "draftBlocks": null,
      "draftShortTitle": null,
      "draftTitle": "Концепты",
      "isArchived": false,
      "isHot": false,
      "isPartnership": false,
      "lastEditedAt": 2021-06-03T16:26:11.000Z,
      "metaDescription": null,
      "metaTitle": null,
      "mmm": null,
      "partnershipBadgeName": null,
      "partnershipImage": null,
      "partnershipLink": null,
      "partnershipName": null,
      "service": "autoru",
      "shortTitle": null,
      "title": "Концепты",
      "urlPart": "conceptcar",
    },
    Object {
      "blocks": null,
      "category_tag": Object {
        "category_key": "news",
        "createdAt": 2021-09-08T12:30:35.000Z,
        "id": 2,
        "tag_key": "podcast",
      },
      "createdAt": 2021-06-03T16:26:24.000Z,
      "draftBlocks": null,
      "draftShortTitle": null,
      "draftTitle": " Подкаст",
      "isArchived": false,
      "isHot": false,
      "isPartnership": false,
      "lastEditedAt": 2021-06-03T16:26:24.000Z,
      "metaDescription": null,
      "metaTitle": null,
      "mmm": null,
      "partnershipBadgeName": null,
      "partnershipImage": null,
      "partnershipLink": null,
      "partnershipName": null,
      "service": "autoru",
      "shortTitle": null,
      "title": " Подкаст",
      "urlPart": "podcast",
    },
  ],
  "title": "Новости",
  "urlPart": "news",
}
`;

exports[`Get category transformer Может возвращает категорию с трансформированными черновыми блоками 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "i am transformed",
      "type": "text",
    },
  ],
  "createdAt": 2021-06-03T16:25:54.000Z,
  "isArchived": false,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "Новости (мета дескрипшен)",
  "metaTitle": "Новости (мета тайтл)",
  "posts": Object {},
  "postsCount": 10,
  "shortTitle": "Ньюс (draft)",
  "tags": undefined,
  "title": "Новости (draft)",
  "urlPart": "news",
}
`;

exports[`Get category transformer Может возвращать категорию с трансформированными блоками 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "i am transformed",
      "type": "text",
    },
  ],
  "createdAt": 2021-06-03T16:25:54.000Z,
  "isArchived": false,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "Новости (мета дескрипшен)",
  "metaTitle": "Новости (мета тайтл)",
  "posts": Object {},
  "postsCount": 10,
  "shortTitle": "Ньюс",
  "tags": undefined,
  "title": "Новости",
  "urlPart": "news",
}
`;

exports[`Get category transformer Может возвращать трансформированный черновик категории 1`] = `
Object {
  "blocks": Array [],
  "createdAt": 2021-06-03T16:25:54.000Z,
  "isArchived": false,
  "lastEditedAt": 2021-09-08T12:30:35.000Z,
  "metaDescription": "Новости (мета дескрипшен)",
  "metaTitle": "Новости (мета тайтл)",
  "posts": null,
  "postsCount": 10,
  "shortTitle": "Ньюс (draft)",
  "tags": undefined,
  "title": "Новости (draft)",
  "urlPart": "news",
}
`;
